--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <title>Amazon</title>
 </head>
 <body>
+
     <header>
         <div class="navbar">
+
             <div class="nav-logo border">
                 <div class="logo"></div>
             </div>
@@ -20,38 +22,168 @@
                     <i class="fa-solid fa-location-dot"></i>
                     <p class="add-second">India</p>
                 </div>
-                </div>
+            </div>
 
-                <div class="nav-search">
+             <div class="nav-search">
                     <select class="search-select">
                         <option>All</option>
                     </select>
                     <input class="search-input" type="search" placeholder="Search Amazon">
                     <div class="search-icon"><i class="fa-solid fa-magnifying-glass"></i></div>
-                </div>
+             </div>
 
                 <!-- box-4 Flag EN -->
 
-                <div class="nav-signin border">
+            <div class="nav-signin border">
                     <p><span>Hello, sign in</span></p>
                     <p class="nav-second">Account & Lists</p>
-                </div>
+            </div>
 
-                 <div class="nav-return border">
+            <div class="nav-return border">
                     <p><span>Returns</span></p>
                     <p class="nav-second">& Orders</p>
-                </div>
+             </div>
 
-                <div class="nav-cart border">
+             <div class="nav-cart border">
                     <i class="fa-solid fa-cart-shopping"></i>
                     Cart
-                </div>
+             </div>
 
+        </div>
 
+        <div class="panel">
 
+            <div class="panel-all">
+                <i class="fa-solid fa-bars"></i>
+                All
+            </div>
 
+            <div class="panel-ops">
+                <p>Today's Deal</p>
+                <p>Customer Service</p>
+                <p>Registry</p>
+                <p>Gift Cards</p>
+                <p>Sell</p>
+            </div>
+
+            <div class="panel-deals">
+                Shop deals in Electronics
             </div>
         </div>
     </header>
+
+    <div class="hero-section">
+        <div class="hero-msg">
+            <p>You are on amazon.com. You can also shop on Amazon India for millions of products with first local delivery. <a href="www.amazon.in">Click here to go to amazon.in</a></p>
+        </div>
+    </div>
+
+    <div class="shop-section">
+        <div class="box1 box">
+           <div class="box-content">
+             <h2>Clothes</h2>
+             <div class="box1-img"></div>
+            <p>See more</p>
+           </div>
+        </div>
+        <div class="box2 box">  <div class="box-content">
+             <h2>Health & Personal Care</h2>
+             <div class="box2-img"></div>
+            <p>See more</p>
+           </div></div>
+        <div class="box3 box">  <div class="box-content">
+             <h2>Furniture</h2>
+             <div class="box3-img"></div>
+            <p>See more</p>
+           </div></div>
+        <div class="box4 box">  <div class="box-content">
+             <h2>Electronics</h2>
+             <div class="box4-img"></div>
+            <p>See more</p>
+           </div></div>
+           <div class="box1 box">
+           <div class="box-content">
+             <h2>Beauty Pics</h2>
+             <div class="box5-img"></div>
+            <p>See more</p>
+           </div>
+        </div>
+        <div class="box2 box">  <div class="box-content">
+             <h2>Pets Care</h2>
+             <div class="box6-img"></div>
+            <p>See more</p>
+           </div></div>
+        <div class="box3 box"><div class="box-content">
+             <h2>New Arrival in Toys</h2>
+             <div class="box7-img"></div>
+            <p>See more</p>
+           </div></div>
+        <div class="box4 box">  <div class="box-content">
+             <h2>Discover Fashion Trends</h2>
+             <div class="box8-img"></div>
+            <p>See more</p>
+           </div></div>
+    </div>
+
+
+    <footer>
+        <div class="foot-panel1">
+            Back to Top
+        </div>
+
+        <div class="foot-panel2">
+            <ul>
+                <li><p>Get to Know Us</p></li>
+                <li><a href="">Careers</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">About Amazon</a></li>
+                <li><a href="">Investor Relations</a></li>
+                <li><a href="">Amazon Devices</a></li>
+                <li><a href="">Amazon Science</a></li>
+            </ul>
+             <ul>
+                <li><p>Get to Know Us</p></li>
+                <li><a href="">Careers</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">About Amazon</a></li>
+                <li><a href="">Investor Relations</a></li>
+                <li><a href="">Amazon Devices</a></li>
+                <li><a href="">Amazon Science</a></li>
+            </ul>
+             <ul>
+                <li><p>Get to Know Us</p></li>
+                <li><a href="">Careers</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">About Amazon</a></li>
+                <li><a href="">Investor Relations</a></li>
+                <li><a href="">Amazon Devices</a></li>
+                <li><a href="">Amazon Science</a></li>
+            </ul>
+             <ul>
+                <li><p>Get to Know Us</p></li>
+                <li><a href="">Careers</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">About Amazon</a></li>
+                <li><a href="">Investor Relations</a></li>
+                <li><a href="">Amazon Devices</a></li>
+                <li><a href="">Amazon Science</a></li>
+            </ul>
+        </div>
+
+        <div class="foot-panel3">
+            <div class="logo"></div>
+        </div>
+
+        <div class="foot-panel4">
+            <div class="pages">
+                <a >Conditions of Use</a>
+                <a >Privacy Notice</a>
+                <a >Your Ads Privacy Choices</a>
+            </div>
+            <div class="copyright">
+                &copy; 1996-2023, Amazon.com, Inc. or its affiliates
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
